Bug 68641 - [HSW]igt/kms_flip/flip-vs-modeset-vs-hang-interruptible causes [drm:i915_hangcheck_elapsed] *ERROR* stuck on render ring with debug kernel
Summary: [HSW]igt/kms_flip/flip-vs-modeset-vs-hang-interruptible causes [drm:i915_hang...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Daniel Vetter
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-28 07:23 UTC by lu hua
Modified: 2017-10-06 14:43 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (124.74 KB, text/plain)
2013-08-28 07:23 UTC, lu hua
no flags Details
tune down hangcheck noise (1.41 KB, patch)
2013-08-28 09:00 UTC, Daniel Vetter
no flags Details | Splinter Review

Description lu hua 2013-08-28 07:23:26 UTC
Created attachment 84774 [details]
dmesg

System Environment:
--------------------------
Platform:  Haswell
Kernel:    (drm-intel-nightly_debug)aaf0996cd776c5131d108f08a2e587ab0baaa6d4

Bug detailed description:
-----------------------------
It happens on haswell with NVIDIA card GT440. 
[drm:i915_hangcheck_elapsed] *ERROR* stuck on render ring appears in dmesg.

# cat /sys/class/drm/card1/error
no error state collected

Following cases also has this issue.
igt/kms_flip/flip-vs-modeset-vs-hang-interruptible
igt/kms_flip/flip-vs-panning-vs-hang
igt/kms_flip/flip-vs-panning-vs-hang-interruptible

output:
Using monotonic timestamps
Beginning flip-vs-modeset-vs-hang-interruptible on crtc 3, connector 21
  1920x1200 60 1920 1968 2000 2080 1200 1203 1209 1235 0x9 0x48 154000
...
flip-vs-modeset-vs-hang-interruptible on crtc 3, connector 21: PASSED

Beginning flip-vs-modeset-vs-hang-interruptible on crtc 5, connector 21
  1920x1200 60 1920 1968 2000 2080 1200 1203 1209 1235 0x9 0x48 154000
...
flip-vs-modeset-vs-hang-interruptible on crtc 5, connector 21: PASSED

Beginning flip-vs-modeset-vs-hang-interruptible on crtc 7, connector 21
  1920x1200 60 1920 1968 2000 2080 1200 1203 1209 1235 0x9 0x48 154000
...
flip-vs-modeset-vs-hang-interruptible on crtc 7, connector 21: PASSED

Subtest flip-vs-modeset-vs-hang-interruptible: SUCCESS

Reproduce steps:
----------------------------
1. ./kms_flip --run-subtest flip-vs-modeset-vs-hang-interruptible
Comment 1 Daniel Vetter 2013-08-28 08:59:49 UTC
This is an i915 test and shouldn't be affected at all by nouveau. Also

[   22.762957] [drm] Simulated gpu hang, resetting stop_rings

so this isn't actually a bug, but just an issue with our debug output being a bit too noisy.

Now this noisy error output to dmesg was added in

commit 05407ff889ceebe383aa5907219f86582ef96b72
Author: Mika Kuoppala <mika.kuoppala@linux.intel.com>
Date:   Thu May 30 09:04:29 2013 +0300

    drm/i915: detect hang using per ring hangcheck_score

Why was that not caught as a regression? Or have I missed the bug report?

I'll write a quick patch to tune down the debug output.
Comment 2 Daniel Vetter 2013-08-28 09:00:13 UTC
Created attachment 84778 [details] [review]
tune down hangcheck noise
Comment 3 lu hua 2013-08-30 02:52:41 UTC
Fixed on latest -nightly kernel.
Comment 4 lu hua 2013-08-30 02:52:55 UTC
Verified.Fixed.
Comment 5 Elizabeth 2017-10-06 14:43:34 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.